# anagrams

./: .gitignore  Anagrams.cabal  README.md  stack.yaml  words  words-small-8859-1  words-small-utf8
src/: AnaTree.hs  Main.hs
src/Data/: AnaTree.hs
