name:                 Anagrams
version:              0.1.0.0
synopsis:             Anagram generator
-- description:
-- license:
-- license-file:
homepage:
author:               Nathan Stien
maintainer:           nathanism@gmail.com
category:             Language
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable anagrams
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, text, containers
  hs-source-dirs:       src
  default-language:     Haskell2010
  -- ld-options: 		-static -pthread 
